src/test/deca/context/invalid/intermediaire2/arithmetiques/00typeErrorDiv.deca
// Description:
//    Programme minimaliste assignant le résultat d'un division à une variable int -> erreur de typage
//
// Resultats:
//    00typeErrorDiv.lis
//
// Historique:
//    cree le 09/06/2022

{
    int x = 6 / 3;
}